# dural-perisinus-segmentation

./: .gitignore  .gitmodules  LICENSE  README.md  pixi.toml  pyproject.toml  reproduce.md
bash/: export_nnunet.sh
src/dural_perisinus_segmentation/: cli.py  utils.py
src/dural_perisinus_segmentation/data/: convert.py  split.py
src/dural_perisinus_segmentation/evaluation/: evaluate.py  inter_rater.py  metrics.py
src/dural_perisinus_segmentation/plot/: segmentation.py  utils.py  volumes_blandaltman.py  volumes_scatter.py
src/dural_perisinus_segmentation/stat/: conf.py  pvalues.py
