[project]
authors = [
    { name = "thibaultdvx", email = "thibault.devarax@icm-institute.org" },
]
dependencies = []
name = "dural-perisinus-segmentation"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = [
    "osx-arm64",
    "linux-64",
    "win-64",
    { name = "linux-cuda", platform = "linux-64", cuda = "12" },
    { name = "win-cuda", platform = "win-64", cuda = "12" },
]

[tool.pixi.pypi-dependencies]
dural_perisinus_segmentation = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"

[tool.pixi.feature.gpu]
platforms = ["linux-cuda", "win-cuda"]

[tool.pixi.feature.gpu.dependencies]
pytorch-gpu = "*"

[tool.pixi.feature.cpu]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = "*"

[tool.pixi.environments]
training = ["gpu", "nnunet"]
default = ["cpu"]

[dependency-groups]
nnunet = ["nnunetv2"]

