[project]
authors = [
    { name = "thibaultdvx", email = "thibault.devarax@icm-institute.org" },
]
dependencies = ["nnunetv2>=2.8.1,<3"]
name = "dural-perisinus-segmentation"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.scripts]
dural-perisinus-seg = "dural_perisinus_segmentation.cli:cli"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = [
    "osx-arm64",
    "linux-64",
    "win-64",
    { name = "linux-cuda", platform = "linux-64", cuda = "12" },
    { name = "win-cuda", platform = "win-64", cuda = "12" },
]

[tool.pixi.pypi-dependencies]
dural_perisinus_segmentation = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.*"
click = ">=8.4.1,<9"

[tool.pixi.feature.gpu]
platforms = ["linux-cuda", "win-cuda"]

[tool.pixi.feature.gpu.dependencies]
pytorch-gpu = "*"
torchvision = ">=0.21.0,<0.22"

[tool.pixi.feature.cpu]
platforms = ["linux-64", "win-64", "osx-arm64"]

[tool.pixi.feature.cpu.dependencies]
pytorch-cpu = ">=2.4.1,<2.7.0"

[tool.pixi.feature.analysis.dependencies]
tqdm = ">=4.68.3,<5"

[tool.pixi.environments]
training = ["gpu"]
default = ["cpu", "analysis"]

[dependency-groups]
analysis = ["clinicadl==2.0"]

